--- a/ASProjektWPF/MainWindow.xaml
+++ b/ASProjektWPF/MainWindow.xaml
@@ -51,9 +51,10 @@
                 <StackPanel>
                     <RadioButton x:Name="RB_Register" Content="Zarejestruj się" Height="50" FontSize="14" Style="{StaticResource MenuButtomTheme}"/>
                     <RadioButton x:Name="RB_Login" Content="Zaloguj sie" Height="50" FontSize="14" Style="{StaticResource MenuButtomTheme}"/>
+                    <RadioButton x:Name="RB_ComapnyProfile" Content="Profil Firmowy" Height="50" FontSize="14" Style="{StaticResource MenuButtomTheme}" Click="RB_ComapnyProfile_Click"/>
                     <RadioButton x:Name="RB_Profil" Content="Profil" Height="50" FontSize="14" Style="{StaticResource MenuButtomTheme}" Click="RB_Register_Click"/>
                     <RadioButton Content="Home" Height="50" FontSize="14" Style="{StaticResource MenuButtomTheme}" IsChecked="True" Click="RG_Home_Click"/>
-                    <RadioButton Content="Konto Firmy " Height="50"  FontSize="14" Style="{StaticResource MenuButtomTheme}" Click="RG_CompanyAccount_Click"/>
+                    <RadioButton Content="Ustawienia firmowe " Height="50"  FontSize="14" Style="{StaticResource MenuButtomTheme}" Click="RG_CompanyAccount_Click"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" VerticalAlignment="Bottom">
                     <Button  Click="Btn_LogOut" Content="Wyloguj się"/>
