--- a/ASProjektWPF/Pages/Home.xaml
+++ b/ASProjektWPF/Pages/Home.xaml
@@ -68,7 +68,7 @@
                                     <Button x:Name="Btn_WorkTime" Content="Wymiar pracy" Background="#262626" Foreground="White" Style="{StaticResource SearchGroupButton}" Click="Button_Click"/>
                                 </Grid>
                             </Border>
-                            <Border Grid.Row="1" Grid.Column="3" Margin="0,10,0,0" Padding="10">
+                            <Border Grid.Row="1" Grid.Column="3" Margin="0,10,0,0" Padding="10" HorizontalAlignment="Left">
                                 <Button x:Name="Btn_WorkType" Content="Tryb pracy" Padding="5" Background="#262626" Foreground="White" Style="{StaticResource SearchGroupButton}" Click="Button_Click"/>
                             </Border>
                             <Button Grid.Row="1" Grid.Column="4" Content="Szukaj" Margin="10" Padding="10" Style="{StaticResource SearchButton}" Click="Button_Click"/>
